fix spacing on create_events page

--- a/app/static/create_events.css
+++ b/app/static/create_events.css
@@ -46,3 +46,7 @@ main {
 .event-title, .event-date , .event-venue {
   margin: 20px 0 10px 0;
 }
+
+.upload-button {
+  margin-top: 50px;
+}
